@@ -2,8 +2,9 @@ Many sites provide e-books in EPUB format, for example:
 <p>
 <ul>
 <li><a href="http://www.epubbooks.com/">epubBooks.com</a>
-<li><a href="http://www.feedbooks.com/">Feedbooks</a>
-<li><a href="http://www.smashwords.com/">Smashwords</a>
-<li><a href="http://m.gutenberg.org/">Project Gutenberg</a>
+<li><a href="http://m.feedbooks.com/">Feedbooks</a>
+<li><a href="http://www.manybooks.net/m/">ManyBooks.net</a>
 <li><a href="http://shop.oreilly.com/category/ebooks.do">O'Reilly</a>
+<li><a href="http://m.gutenberg.org/">Project Gutenberg</a>
+<li><a href="http://www.smashwords.com/">Smashwords</a>
 </ul>
